--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "file-loader": "^0.8.5",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
   }
 }
